# rust-bitcoincore-rpc

client/: Cargo.toml
client/src/: client.rs  error.rs
