[package]
name = "bitcoincore-rpc"
version = "0.17.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.17.0", path = "../json" }

log = "0.4.5"
jsonrpc = "0.14.0"
minreq = { version = "2.6.0", features = ["https"] }

# Used for deserialization of JSON.
serde = "1"
serde_json  = {version = "1", features = ["raw_value"]}
bitcoin-private = "0.1.0"
base64 = { version = "0.13.0" }
